[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/resources/panel_variant_01.stylebox" type="StyleBox" id=1]
[ext_resource path="res://scenes/file_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=3]
[ext_resource path="res://scenes/central_view/central_view.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset_data/user_settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/asset_detail_view/asset_detail_view.tscn" type="PackedScene" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0

[node name="MenuBar" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 24.0

[node name="FileMenu" type="MenuButton" parent="MainPanel/VBoxContainer/MenuBar"]
margin_right = 33.0
margin_bottom = 24.0
text = "File"
script = ExtResource( 2 )

[node name="HSplitContainer" type="HSplitContainer" parent="MainPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_vertical = 3

[node name="CentralView" parent="MainPanel/VBoxContainer/HSplitContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 672.0
margin_bottom = 562.0

[node name="AssetDetailView" parent="MainPanel/VBoxContainer/HSplitContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 680.0
margin_right = 1014.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="NewGalaxyDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.914
margin_top = -178.416
margin_right = 303.086
margin_bottom = 210.584
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
window_title = "Select an empty folder for the new galaxy"
resizable = true
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true
current_dir = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy"
current_path = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FolderNotEmptyNotification" type="AcceptDialog" parent="NewGalaxyDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -186.5
margin_right = 295.0
margin_bottom = 156.5
popup_exclusive = true
window_title = ""
dialog_text = "The selected folder is not empty. Please select an empty folder."

[node name="LoadGalaxyDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.914
margin_top = -178.416
margin_right = 303.086
margin_bottom = 210.584
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
window_title = "Select a galaxy.json file."
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "galaxy.json" )
show_hidden_files = true
current_dir = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy"
current_path = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddAssetsDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.914
margin_top = -178.416
margin_right = 303.086
margin_bottom = 210.584
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
window_title = "Select asset files."
resizable = true
mode_overrides_title = false
mode = 3
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )
show_hidden_files = true
current_dir = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy"
current_path = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserSettings" parent="." instance=ExtResource( 5 )]

[node name="AutoSaveTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true
[connection signal="new_galaxy" from="." to="MainPanel/VBoxContainer/HSplitContainer/AssetDetailView" method="_on_Main_new_galaxy"]
[connection signal="new_galaxy" from="." to="MainPanel/VBoxContainer/HSplitContainer/CentralView" method="_on_new_galaxy"]
[connection signal="add_assets_pressed" from="MainPanel/VBoxContainer/MenuBar/FileMenu" to="." method="_open_add_assets_dialog"]
[connection signal="load_galaxy_pressed" from="MainPanel/VBoxContainer/MenuBar/FileMenu" to="." method="_open_load_galaxy_dialog"]
[connection signal="new_galaxy_pressed" from="MainPanel/VBoxContainer/MenuBar/FileMenu" to="." method="_open_new_galaxy_dialog" binds= [ "res://" ]]
[connection signal="asset_search_requested" from="MainPanel/VBoxContainer/HSplitContainer/CentralView" to="." method="_on_AssetGrid_asset_search_requested"]
[connection signal="selection_changed" from="MainPanel/VBoxContainer/HSplitContainer/CentralView" to="MainPanel/VBoxContainer/HSplitContainer/AssetDetailView" method="_on_AssetGrid_selection_changed"]
[connection signal="dir_selected" from="NewGalaxyDialog" to="." method="_on_NewGalaxyDialog_dir_selected"]
[connection signal="file_selected" from="LoadGalaxyDialog" to="." method="_load_galaxy_file"]
[connection signal="dir_selected" from="AddAssetsDialog" to="." method="_on_AddAssetsDialog_dir_selected"]
[connection signal="file_selected" from="AddAssetsDialog" to="." method="_on_AddAssetsDialog_file_selected"]
[connection signal="files_selected" from="AddAssetsDialog" to="." method="_on_AddAssetsDialog_files_selected"]
[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_AutoSaveTimer_timeout"]
